// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button deve adicionar um hint custom automaticamente 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<span
  class="hint-wrapper"
>
  <button
    class="emotion-0"
    type="button"
  >
    <span>
      <span>
        Botão
      </span>
    </span>
  </button>
</span>
`;

exports[`Button deve adicionar um hint string automaticamente 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<span
  class="hint-wrapper"
>
  <button
    class="emotion-0"
    type="button"
  >
    <span>
      <span>
        Botão
      </span>
    </span>
  </button>
</span>
`;

exports[`Button deve renderizar corretamente 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Botão
    </span>
  </span>
</button>
`;

exports[`Button deve ter animação de "carregando" ao especificar onClick com retorno do tipo Promise 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<ThemeProvider
  theme={
    Object {
      "animation": Object {
        "fadeInFromTop": "animation-10wpg4t",
        "spinAround": "animation-1scjtrl",
      },
      "baseRadius": 2,
      "baseSize": 16,
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "background": "#f2f2f7",
        "black": "#000000",
        "blue": "#0066f5",
        "blueBg": "#f1f7ff",
        "gray10": "#1a1a1a",
        "gray20": "#333333",
        "gray30": "#4d4d4d",
        "gray40": "#666666",
        "gray50": "#808080",
        "gray60": "#999999",
        "gray70": "#b3b3b3",
        "gray80": "#cccccc",
        "gray90": "#e6e6e6",
        "green": "#00821a",
        "greenBg": "#f0faf2",
        "orange": "#d43900",
        "orangeBg": "#fff9f4",
        "primary": "#056DFF",
        "red": "#E0001A",
        "redBg": "#FAF0F2",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": "0.75rem",
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "animation": Object {
          "fadeInFromTop": "animation-10wpg4t",
          "spinAround": "animation-1scjtrl",
        },
        "baseRadius": 2,
        "baseSize": 16,
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "background": "#f2f2f7",
          "black": "#000000",
          "blue": "#0066f5",
          "blueBg": "#f1f7ff",
          "gray10": "#1a1a1a",
          "gray20": "#333333",
          "gray30": "#4d4d4d",
          "gray40": "#666666",
          "gray50": "#808080",
          "gray60": "#999999",
          "gray70": "#b3b3b3",
          "gray80": "#cccccc",
          "gray90": "#e6e6e6",
          "green": "#00821a",
          "greenBg": "#f0faf2",
          "orange": "#d43900",
          "orangeBg": "#fff9f4",
          "primary": "#056DFF",
          "red": "#E0001A",
          "redBg": "#FAF0F2",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": "0.75rem",
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "animation": Object {
              "fadeInFromTop": "animation-10wpg4t",
              "spinAround": "animation-1scjtrl",
            },
            "baseRadius": 2,
            "baseSize": 16,
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "background": "#f2f2f7",
              "black": "#000000",
              "blue": "#0066f5",
              "blueBg": "#f1f7ff",
              "gray10": "#1a1a1a",
              "gray20": "#333333",
              "gray30": "#4d4d4d",
              "gray40": "#666666",
              "gray50": "#808080",
              "gray60": "#999999",
              "gray70": "#b3b3b3",
              "gray80": "#cccccc",
              "gray90": "#e6e6e6",
              "green": "#00821a",
              "greenBg": "#f0faf2",
              "orange": "#d43900",
              "orangeBg": "#fff9f4",
              "primary": "#056DFF",
              "red": "#E0001A",
              "redBg": "#FAF0F2",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": "0.75rem",
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          size="medium"
          skin="default"
          theme={
            Object {
              "animation": Object {
                "fadeInFromTop": "animation-10wpg4t",
                "spinAround": "animation-1scjtrl",
              },
              "baseRadius": 2,
              "baseSize": 16,
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "background": "#f2f2f7",
                "black": "#000000",
                "blue": "#0066f5",
                "blueBg": "#f1f7ff",
                "gray10": "#1a1a1a",
                "gray20": "#333333",
                "gray30": "#4d4d4d",
                "gray40": "#666666",
                "gray50": "#808080",
                "gray60": "#999999",
                "gray70": "#b3b3b3",
                "gray80": "#cccccc",
                "gray90": "#e6e6e6",
                "green": "#00821a",
                "greenBg": "#f0faf2",
                "orange": "#d43900",
                "orangeBg": "#fff9f4",
                "primary": "#056DFF",
                "red": "#E0001A",
                "redBg": "#FAF0F2",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": "0.75rem",
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
          type="normal"
        >
          <BaseButton
            className="emotion-0"
            onClick={[Function]}
            onLoadingChange={[Function]}
          >
            <BaseButton
              className="emotion-0"
              onClick={[Function]}
              onLoadingChange={[Function]}
            >
              <button
                className="emotion-0"
                onClick={[Function]}
                onKeyPress={[Function]}
                type="button"
              >
                <span>
                  <span>
                    Botão
                  </span>
                </span>
              </button>
            </BaseButton>
          </BaseButton>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Button deve ter animação de "carregando" ao especificar onClick com retorno do tipo Promise 2`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
  pointer-events: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

.emotion-0 span {
  color: transparent;
}

.emotion-0:after {
  -webkit-animation: animation-1scjtrl 500ms infinite linear;
  animation: animation-1scjtrl 500ms infinite linear;
  border: 3px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: "";
  display: block;
  height: 1.5em;
  width: 1.5em;
  position: absolute;
  left: calc(50% - (1.5em / 2));
  top: calc(50% - (1.5em / 2));
}

<ThemeProvider
  theme={
    Object {
      "animation": Object {
        "fadeInFromTop": "animation-10wpg4t",
        "spinAround": "animation-1scjtrl",
      },
      "baseRadius": 2,
      "baseSize": 16,
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "background": "#f2f2f7",
        "black": "#000000",
        "blue": "#0066f5",
        "blueBg": "#f1f7ff",
        "gray10": "#1a1a1a",
        "gray20": "#333333",
        "gray30": "#4d4d4d",
        "gray40": "#666666",
        "gray50": "#808080",
        "gray60": "#999999",
        "gray70": "#b3b3b3",
        "gray80": "#cccccc",
        "gray90": "#e6e6e6",
        "green": "#00821a",
        "greenBg": "#f0faf2",
        "orange": "#d43900",
        "orangeBg": "#fff9f4",
        "primary": "#056DFF",
        "red": "#E0001A",
        "redBg": "#FAF0F2",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": "0.75rem",
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "animation": Object {
          "fadeInFromTop": "animation-10wpg4t",
          "spinAround": "animation-1scjtrl",
        },
        "baseRadius": 2,
        "baseSize": 16,
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "background": "#f2f2f7",
          "black": "#000000",
          "blue": "#0066f5",
          "blueBg": "#f1f7ff",
          "gray10": "#1a1a1a",
          "gray20": "#333333",
          "gray30": "#4d4d4d",
          "gray40": "#666666",
          "gray50": "#808080",
          "gray60": "#999999",
          "gray70": "#b3b3b3",
          "gray80": "#cccccc",
          "gray90": "#e6e6e6",
          "green": "#00821a",
          "greenBg": "#f0faf2",
          "orange": "#d43900",
          "orangeBg": "#fff9f4",
          "primary": "#056DFF",
          "red": "#E0001A",
          "redBg": "#FAF0F2",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": "0.75rem",
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "animation": Object {
              "fadeInFromTop": "animation-10wpg4t",
              "spinAround": "animation-1scjtrl",
            },
            "baseRadius": 2,
            "baseSize": 16,
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "background": "#f2f2f7",
              "black": "#000000",
              "blue": "#0066f5",
              "blueBg": "#f1f7ff",
              "gray10": "#1a1a1a",
              "gray20": "#333333",
              "gray30": "#4d4d4d",
              "gray40": "#666666",
              "gray50": "#808080",
              "gray60": "#999999",
              "gray70": "#b3b3b3",
              "gray80": "#cccccc",
              "gray90": "#e6e6e6",
              "green": "#00821a",
              "greenBg": "#f0faf2",
              "orange": "#d43900",
              "orangeBg": "#fff9f4",
              "primary": "#056DFF",
              "red": "#E0001A",
              "redBg": "#FAF0F2",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": "0.75rem",
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          size="medium"
          skin="default"
          theme={
            Object {
              "animation": Object {
                "fadeInFromTop": "animation-10wpg4t",
                "spinAround": "animation-1scjtrl",
              },
              "baseRadius": 2,
              "baseSize": 16,
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "background": "#f2f2f7",
                "black": "#000000",
                "blue": "#0066f5",
                "blueBg": "#f1f7ff",
                "gray10": "#1a1a1a",
                "gray20": "#333333",
                "gray30": "#4d4d4d",
                "gray40": "#666666",
                "gray50": "#808080",
                "gray60": "#999999",
                "gray70": "#b3b3b3",
                "gray80": "#cccccc",
                "gray90": "#e6e6e6",
                "green": "#00821a",
                "greenBg": "#f0faf2",
                "orange": "#d43900",
                "orangeBg": "#fff9f4",
                "primary": "#056DFF",
                "red": "#E0001A",
                "redBg": "#FAF0F2",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": "0.75rem",
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
          type="normal"
        >
          <BaseButton
            className="emotion-0"
            onClick={[Function]}
            onLoadingChange={[Function]}
          >
            <BaseButton
              className="emotion-0"
              onClick={[Function]}
              onLoadingChange={[Function]}
            >
              <button
                className="emotion-0"
                onClick={[Function]}
                onKeyPress={[Function]}
                type="button"
              >
                <span>
                  <span>
                    Botão
                  </span>
                </span>
              </button>
            </BaseButton>
          </BaseButton>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Button deve ter animação de loading 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
  pointer-events: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

.emotion-0 span {
  color: transparent;
}

.emotion-0:after {
  -webkit-animation: animation-1scjtrl 500ms infinite linear;
  animation: animation-1scjtrl 500ms infinite linear;
  border: 3px solid currentColor;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: "";
  display: block;
  height: 1.5em;
  width: 1.5em;
  position: absolute;
  left: calc(50% - (1.5em / 2));
  top: calc(50% - (1.5em / 2));
}

<button
  class="emotion-0"
  type="button"
>
  <span>
    <span>
      Botão
    </span>
  </span>
</button>
`;

exports[`Button não deve ter animação com "onClick" que não seja promise 1`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<ThemeProvider
  theme={
    Object {
      "animation": Object {
        "fadeInFromTop": "animation-10wpg4t",
        "spinAround": "animation-1scjtrl",
      },
      "baseRadius": 2,
      "baseSize": 16,
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "background": "#f2f2f7",
        "black": "#000000",
        "blue": "#0066f5",
        "blueBg": "#f1f7ff",
        "gray10": "#1a1a1a",
        "gray20": "#333333",
        "gray30": "#4d4d4d",
        "gray40": "#666666",
        "gray50": "#808080",
        "gray60": "#999999",
        "gray70": "#b3b3b3",
        "gray80": "#cccccc",
        "gray90": "#e6e6e6",
        "green": "#00821a",
        "greenBg": "#f0faf2",
        "orange": "#d43900",
        "orangeBg": "#fff9f4",
        "primary": "#056DFF",
        "red": "#E0001A",
        "redBg": "#FAF0F2",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": "0.75rem",
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "animation": Object {
          "fadeInFromTop": "animation-10wpg4t",
          "spinAround": "animation-1scjtrl",
        },
        "baseRadius": 2,
        "baseSize": 16,
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "background": "#f2f2f7",
          "black": "#000000",
          "blue": "#0066f5",
          "blueBg": "#f1f7ff",
          "gray10": "#1a1a1a",
          "gray20": "#333333",
          "gray30": "#4d4d4d",
          "gray40": "#666666",
          "gray50": "#808080",
          "gray60": "#999999",
          "gray70": "#b3b3b3",
          "gray80": "#cccccc",
          "gray90": "#e6e6e6",
          "green": "#00821a",
          "greenBg": "#f0faf2",
          "orange": "#d43900",
          "orangeBg": "#fff9f4",
          "primary": "#056DFF",
          "red": "#E0001A",
          "redBg": "#FAF0F2",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": "0.75rem",
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "animation": Object {
              "fadeInFromTop": "animation-10wpg4t",
              "spinAround": "animation-1scjtrl",
            },
            "baseRadius": 2,
            "baseSize": 16,
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "background": "#f2f2f7",
              "black": "#000000",
              "blue": "#0066f5",
              "blueBg": "#f1f7ff",
              "gray10": "#1a1a1a",
              "gray20": "#333333",
              "gray30": "#4d4d4d",
              "gray40": "#666666",
              "gray50": "#808080",
              "gray60": "#999999",
              "gray70": "#b3b3b3",
              "gray80": "#cccccc",
              "gray90": "#e6e6e6",
              "green": "#00821a",
              "greenBg": "#f0faf2",
              "orange": "#d43900",
              "orangeBg": "#fff9f4",
              "primary": "#056DFF",
              "red": "#E0001A",
              "redBg": "#FAF0F2",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": "0.75rem",
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          size="medium"
          skin="default"
          theme={
            Object {
              "animation": Object {
                "fadeInFromTop": "animation-10wpg4t",
                "spinAround": "animation-1scjtrl",
              },
              "baseRadius": 2,
              "baseSize": 16,
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "background": "#f2f2f7",
                "black": "#000000",
                "blue": "#0066f5",
                "blueBg": "#f1f7ff",
                "gray10": "#1a1a1a",
                "gray20": "#333333",
                "gray30": "#4d4d4d",
                "gray40": "#666666",
                "gray50": "#808080",
                "gray60": "#999999",
                "gray70": "#b3b3b3",
                "gray80": "#cccccc",
                "gray90": "#e6e6e6",
                "green": "#00821a",
                "greenBg": "#f0faf2",
                "orange": "#d43900",
                "orangeBg": "#fff9f4",
                "primary": "#056DFF",
                "red": "#E0001A",
                "redBg": "#FAF0F2",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": "0.75rem",
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
          type="normal"
        >
          <BaseButton
            className="emotion-0"
            onClick={[Function]}
            onLoadingChange={[Function]}
          >
            <BaseButton
              className="emotion-0"
              onClick={[Function]}
              onLoadingChange={[Function]}
            >
              <button
                className="emotion-0"
                onClick={[Function]}
                onKeyPress={[Function]}
                type="button"
              >
                <span>
                  <span>
                    Botão
                  </span>
                </span>
              </button>
            </BaseButton>
          </BaseButton>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Button não deve ter animação com "onClick" que não seja promise 2`] = `
.emotion-0 {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: "Noto Sans",sans-serif;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  background-color: #ffffff;
  border: 1px solid #b3b3b3;
  border-radius: 4px;
  color: #666666;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 2.5rem;
}

.emotion-0:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-0:not(:disabled) {
  cursor: pointer;
}

.emotion-0 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-0 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-0:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-0:not(:disabled):hover {
  background-color: #ebebeb;
}

<ThemeProvider
  theme={
    Object {
      "animation": Object {
        "fadeInFromTop": "animation-10wpg4t",
        "spinAround": "animation-1scjtrl",
      },
      "baseRadius": 2,
      "baseSize": 16,
      "breakpoint": Object {
        "small": "@media (max-width: 1280px)",
      },
      "color": Object {
        "background": "#f2f2f7",
        "black": "#000000",
        "blue": "#0066f5",
        "blueBg": "#f1f7ff",
        "gray10": "#1a1a1a",
        "gray20": "#333333",
        "gray30": "#4d4d4d",
        "gray40": "#666666",
        "gray50": "#808080",
        "gray60": "#999999",
        "gray70": "#b3b3b3",
        "gray80": "#cccccc",
        "gray90": "#e6e6e6",
        "green": "#00821a",
        "greenBg": "#f0faf2",
        "orange": "#d43900",
        "orangeBg": "#fff9f4",
        "primary": "#056DFF",
        "red": "#E0001A",
        "redBg": "#FAF0F2",
        "text": "#4d4d4d",
        "white": "#ffffff",
      },
      "font": Object {
        "textFamily": "\\"Noto Sans\\", sans-serif",
        "textSize": "0.75rem",
        "titleFamily": "\\"Noto Sans\\", sans-serif",
      },
      "global": Object {
        "@font-face": Object {
          "fontFamily": "\\"Noto Sans\\"",
          "fontStyle": "normal",
          "fontWeight": "400",
          "src": "url(test-file-stub) format(\\"truetype\\")",
        },
      },
    }
  }
>
  <ThemeProvider
    theme={
      Object {
        "animation": Object {
          "fadeInFromTop": "animation-10wpg4t",
          "spinAround": "animation-1scjtrl",
        },
        "baseRadius": 2,
        "baseSize": 16,
        "breakpoint": Object {
          "small": "@media (max-width: 1280px)",
        },
        "color": Object {
          "background": "#f2f2f7",
          "black": "#000000",
          "blue": "#0066f5",
          "blueBg": "#f1f7ff",
          "gray10": "#1a1a1a",
          "gray20": "#333333",
          "gray30": "#4d4d4d",
          "gray40": "#666666",
          "gray50": "#808080",
          "gray60": "#999999",
          "gray70": "#b3b3b3",
          "gray80": "#cccccc",
          "gray90": "#e6e6e6",
          "green": "#00821a",
          "greenBg": "#f0faf2",
          "orange": "#d43900",
          "orangeBg": "#fff9f4",
          "primary": "#056DFF",
          "red": "#E0001A",
          "redBg": "#FAF0F2",
          "text": "#4d4d4d",
          "white": "#ffffff",
        },
        "font": Object {
          "textFamily": "\\"Noto Sans\\", sans-serif",
          "textSize": "0.75rem",
          "titleFamily": "\\"Noto Sans\\", sans-serif",
        },
        "global": Object {
          "@font-face": Object {
            "fontFamily": "\\"Noto Sans\\"",
            "fontStyle": "normal",
            "fontWeight": "400",
            "src": "url(test-file-stub) format(\\"truetype\\")",
          },
        },
      }
    }
  >
    <Button
      label="Botão"
      onClick={[Function]}
    >
      <WithStyles
        label="Botão"
        onClick={[Function]}
        theme={
          Object {
            "animation": Object {
              "fadeInFromTop": "animation-10wpg4t",
              "spinAround": "animation-1scjtrl",
            },
            "baseRadius": 2,
            "baseSize": 16,
            "breakpoint": Object {
              "small": "@media (max-width: 1280px)",
            },
            "color": Object {
              "background": "#f2f2f7",
              "black": "#000000",
              "blue": "#0066f5",
              "blueBg": "#f1f7ff",
              "gray10": "#1a1a1a",
              "gray20": "#333333",
              "gray30": "#4d4d4d",
              "gray40": "#666666",
              "gray50": "#808080",
              "gray60": "#999999",
              "gray70": "#b3b3b3",
              "gray80": "#cccccc",
              "gray90": "#e6e6e6",
              "green": "#00821a",
              "greenBg": "#f0faf2",
              "orange": "#d43900",
              "orangeBg": "#fff9f4",
              "primary": "#056DFF",
              "red": "#E0001A",
              "redBg": "#FAF0F2",
              "text": "#4d4d4d",
              "white": "#ffffff",
            },
            "font": Object {
              "textFamily": "\\"Noto Sans\\", sans-serif",
              "textSize": "0.75rem",
              "titleFamily": "\\"Noto Sans\\", sans-serif",
            },
            "global": Object {
              "@font-face": Object {
                "fontFamily": "\\"Noto Sans\\"",
                "fontStyle": "normal",
                "fontWeight": "400",
                "src": "url(test-file-stub) format(\\"truetype\\")",
              },
            },
          }
        }
      >
        <Button
          css={[Function]}
          label="Botão"
          onClick={[Function]}
          size="medium"
          skin="default"
          theme={
            Object {
              "animation": Object {
                "fadeInFromTop": "animation-10wpg4t",
                "spinAround": "animation-1scjtrl",
              },
              "baseRadius": 2,
              "baseSize": 16,
              "breakpoint": Object {
                "small": "@media (max-width: 1280px)",
              },
              "color": Object {
                "background": "#f2f2f7",
                "black": "#000000",
                "blue": "#0066f5",
                "blueBg": "#f1f7ff",
                "gray10": "#1a1a1a",
                "gray20": "#333333",
                "gray30": "#4d4d4d",
                "gray40": "#666666",
                "gray50": "#808080",
                "gray60": "#999999",
                "gray70": "#b3b3b3",
                "gray80": "#cccccc",
                "gray90": "#e6e6e6",
                "green": "#00821a",
                "greenBg": "#f0faf2",
                "orange": "#d43900",
                "orangeBg": "#fff9f4",
                "primary": "#056DFF",
                "red": "#E0001A",
                "redBg": "#FAF0F2",
                "text": "#4d4d4d",
                "white": "#ffffff",
              },
              "font": Object {
                "textFamily": "\\"Noto Sans\\", sans-serif",
                "textSize": "0.75rem",
                "titleFamily": "\\"Noto Sans\\", sans-serif",
              },
              "global": Object {
                "@font-face": Object {
                  "fontFamily": "\\"Noto Sans\\"",
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "src": "url(test-file-stub) format(\\"truetype\\")",
                },
              },
            }
          }
          type="normal"
        >
          <BaseButton
            className="emotion-0"
            onClick={[Function]}
            onLoadingChange={[Function]}
          >
            <BaseButton
              className="emotion-0"
              onClick={[Function]}
              onLoadingChange={[Function]}
            >
              <button
                className="emotion-0"
                onClick={[Function]}
                onKeyPress={[Function]}
                type="button"
              >
                <span>
                  <span>
                    Botão
                  </span>
                </span>
              </button>
            </BaseButton>
          </BaseButton>
        </Button>
      </WithStyles>
    </Button>
  </ThemeProvider>
</ThemeProvider>
`;
